# desktop-pet

./: CLAUDE.md  README.md  design.md  index.html  package-lock.json  package.json  pet.html  tailwind.config.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
public/: default_settings.json
scripts/: gen-sprites.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/os/: macos_os.rs  mod.rs  other_os.rs  windows_os.rs
src/dashboard/: Dashboard.jsx  main.jsx
src/pet-canvas/: CanvasApp.jsx  PetEngine.js  main.jsx
tools/: gen_icon.mjs  gen_slime.mjs  gen_sprite.mjs  generate_sprites.mjs
