[package]
name = "desktop-pet"
version = "1.0.0"
description = "A desktop pet that plays on your real desktop icons."
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"       # CGEventTap mouse hook + CGWindowList
core-foundation = "0.10"     # run loop + CF types for the window list
core-foundation-sys = "0.8"  # raw CFDictionary access
objc = "0.2"                 # NSScreen frame/visibleFrame/backingScaleFactor

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
